--- a/Rent.ie_final.ipynb
+++ b/Rent.ie_final.ipynb
@@ -15,7 +15,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from bs4 import BeautifulSoup" #importing beautifulsoup for scrapping
+    "from bs4 import BeautifulSoup" 
    ]
   },
   {
@@ -39,7 +39,7 @@
     "for number in range(1,32):\n",
     "    url1=  str('https://www.rent.ie/houses-to-let/renting_dublin/rent_0-2000/page_')\n",
     "    page = url1 + str(number)\n",
-    "    req = request.Request(page, headers={'User-Agent': 'Mozilla/5.0 (Macintosh; Intel Mac OS X 10_10_2) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/40.0.2214.115 Safari/537.36'})\n", #using user agent to access the site
+    "    req = request.Request(page, headers={'User-Agent': 'Mozilla/5.0 (Macintosh; Intel Mac OS X 10_10_2) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/40.0.2214.115 Safari/537.36'})\n",
     "    URL = urlopen(req)\n",
     "    Soup = BeautifulSoup(URL,'html.parser')\n",
     "    for a in Soup.find_all('div',attrs={'class':'search_result'}):\n",
@@ -47,7 +47,7 @@
     "        Price = a.h4.text.strip()\n",
     "        Details = a.h3.text.strip()\n",
     "        semi = '|'\n",
-    "        with open('scrapping.csv','a') as csv_file:\n", # loading the data in csv file
+    "        with open('scrapping.csv','a') as csv_file:\n",
     "            writer = csv.writer(csv_file)\n",
     "            writer.writerow([Price,Details,Address])\n",
     "        #print(Price,';',Details,';',Address)\n",
